[aliases]
# Remove all source and wheel builds.
distclean = rotate --keep=0 --match=.tar.gz,.whl clean
# Make source and wheel builds, then remove all of them but the latest.
build = sdist bdist_wheel rotate --keep=1 --match=.tar.gz,.whl

[metadata]
name = pup-tools
version = 3.0.0
author = Ellen Marie Dash
author_email = me@duckie.co
description = A collection of miscellaneous Python tools.
long_description = file: README.md
url = https://github.com/duckinator/pup-tools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
setup_requires =
    twine
    wheel
    distutils_twine~=3.0
install_requires =
    astunparse
python_requires = >=3.5

[options.entry_points]
console_scripts =
    pup.xpath = pup.xpath:_main
    pup.http  = pup.http:_main
    pup.py    = pup.py:main
distutils.commands =
    release = distutils_twine:release

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True
